--- a/LearnAI2/LearnAI2Release.entitlements
+++ b/LearnAI2/LearnAI2Release.entitlements
@@ -6,10 +6,9 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.learnai2sehaj</string>
 		<string>group.learnai2</string>
 	</array>
-	<key>com.apple.security.files.user-selected.read-only</key>
+	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
