--- a/ReMEMq.xcodeproj/xcshareddata/xcschemes/ReMEMq 1.xcscheme
+++ b/ReMEMq.xcodeproj/xcshareddata/xcschemes/ReMEMq 1.xcscheme
@@ -44,6 +44,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1E515F092D102902001733EF"
+               BuildableName = "ReMEMqTests.xctest"
+               BlueprintName = "ReMEMqTests"
+               ReferencedContainer = "container:ReMEMq.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1E4E640D2D8025CF00085C5E"
+               BuildableName = "SharedAPITests.xctest"
+               BlueprintName = "SharedAPITests"
+               ReferencedContainer = "container:ReMEMq.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
