--- a/LearnAI2/Info.plist
+++ b/LearnAI2/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app transcribes your speech to text for easier note-taking.</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.LearnAI2</string>
 	<key>CFBundleIconName</key>
